CSE241 Algorithms and Data Structures/Closest Pair Problem/Naive Solution/.svn/pristine/46/466274bf8fde8bcbdf324bea7208c1e7d37b013c.svn-base
*** RUNNING PRE-TURNIN TESTS ON 2015-09-12 15:01:09 CDT ***
* Language is Java
ERROR compiling source code:
ClosestPairDC.java:20: error: bad operand types for binary operator '||'
    	if(point1 = null || point2 == null)
    	                 ^
  first type:  <null>
  second type: boolean
ClosestPairDC.java:20: error: incompatible types: XYPoint cannot be converted to boolean
    	if(point1 = null || point2 == null)
    	          ^
ClosestPairDC.java:35: error: non-static method closestPairRecurse(XYPoint[],XYPoint[],int) cannot be referenced from a static context
    	XYPoint[] closestResult = closestPairRecurse(pointsByX, pointsByY, pointsByX.length);
    	                          ^
ClosestPairDC.java:44: error: cannot find symbol
    		System.out.println("DC " + closestResult[0].ToString() + " " + closestResult[1].ToString());
    		                                           ^
  symbol:   method ToString()
  location: class XYPoint
ClosestPairDC.java:44: error: cannot find symbol
    		System.out.println("DC " + closestResult[0].ToString() + " " + closestResult[1].ToString());
    		                                                                               ^
  symbol:   method ToString()
  location: class XYPoint
ClosestPairDC.java:110: error: incompatible types: int cannot be converted to boolean
    	XYPoint[] closestLeft = findClosestPair(XL,YL, XL.length);
    	                                                 ^
ClosestPairDC.java:111: error: incompatible types: int cannot be converted to boolean
    	XYPoint[] closestRight = findClosestPair(XR, YR, XR.length);
    	                                                   ^
ClosestPairDC.java:145: error: bad operand types for binary operator '<'
    	for(int y = 0; y < pointsByY; y++)
    	                 ^
  first type:  int
  second type: XYPoint[]
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
8 errors
